Fix navbar heading alignment

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,4 @@
 $background-color: rgb(38, 42, 48);
 $font-color: #fae;
+
+$site-padding: 10px;
