--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -2,4 +2,6 @@
 
 .navbar {
     background-color: darken($background-color, 5%);
+    padding: (1.5 * $site-padding) $site-padding;
+    font-size: 1.5rem;
 }
